--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,8 @@
 {
+    "typescript.tsdk": "node_modules/typescript/lib",
     "files.exclude": {
         "lib": true,
-        "node_modules": true,
-        "coverage": true,
-        "doc/api": true
+        "node_modules": true
     },
-    "typescript.tsdk": "node_modules/typescript/lib"
+    "task.allowAutomaticTasks": "on"
 }
