--- a/package.json
+++ b/package.json
@@ -70,21 +70,22 @@
         "@kayahr/better-jest": "1.0.4",
         "@kayahr/eslint-config": "2.5.0",
         "@kayahr/jest-electron-runner": "29.0.0",
-        "@types/jest": "29.0.3",
-        "@typescript-eslint/eslint-plugin": "5.38.1",
-        "@typescript-eslint/parser": "5.38.1",
-        "cspell": "6.10.1",
-        "eslint": "8.24.0",
+        "@types/jest": "29.2.2",
+        "@typescript-eslint/eslint-plugin": "5.42.1",
+        "@typescript-eslint/parser": "5.42.1",
+        "cspell": "6.14.2",
+        "eslint": "8.27.0",
         "eslint-plugin-deprecation": "1.3.2",
         "eslint-plugin-simple-import-sort": "8.0.0",
-        "jest": "29.0.3",
+        "jest": "29.3.1",
         "rimraf": "3.0.2",
-        "typedoc": "0.23.15",
+        "source-map-support": "0.5.21",
+        "typedoc": "0.23.20",
         "typescript": "4.8.4"
     },
     "dependencies": {
         "@kayahr/text-encoding": "^1.0.2",
-        "tslib": "^2.4.0",
+        "tslib": "^2.4.1",
         "web-streams-polyfill": "^3.2.1"
     }
 }
