--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,8 @@
 {
     "$schema": "http://json.schemastore.org/tsconfig",
     "compilerOptions": {
-        "target": "es5",
-        "lib": [
-            "es2015.symbol.wellknown", "es2015.reflect", "es2015.iterable", "es2015.collection", "es2015.promise",
-            "es2015.core", "es5", "dom"
-        ],
+        "target": "es2020",
+        "lib": [ "es2020", "dom" ],
         "moduleResolution": "node",
         "module": "commonjs",
         "rootDir": "src",
