--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Build API Doc
         run: npm run doc
       - name: Deploy API Doc
-        if: {{ github.ref == 'ref/head/main' }}
+        if: ${{ github.ref == 'ref/head/main' }}
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
           branch: gh-pages
