--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
         "jest": "29.3.1",
         "rimraf": "3.0.2",
         "source-map-support": "0.5.21",
+        "tmp-promise": "3.0.3",
         "typedoc": "0.23.21",
         "typescript": "4.9.3"
     },
