--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
                 ]
             }
         ],
+        "collectCoverage": true,
         "collectCoverageFrom": [
             "<rootDir>/lib/main/**/*.js"
         ]
