--- a/package.json
+++ b/package.json
@@ -68,26 +68,25 @@
         ]
     },
     "devDependencies": {
-        "@kayahr/better-jest": "1.2.0",
+        "@kayahr/better-jest": "1.2.1",
         "@kayahr/eslint-config": "2.10.2",
         "@kayahr/jest-electron-runner": "29.11.0",
-        "@types/jest": "29.5.11",
-        "@typescript-eslint/eslint-plugin": "6.16.0",
-        "@typescript-eslint/parser": "6.16.0",
-        "cspell": "8.3.0",
-        "eslint": "8.56.0",
+        "@types/jest": "29.5.12",
+        "@typescript-eslint/eslint-plugin": "7.2.0",
+        "@typescript-eslint/parser": "7.2.0",
+        "cspell": "8.6.0",
+        "eslint": "8.57.0",
         "eslint-plugin-deprecation": "2.0.0",
-        "eslint-plugin-simple-import-sort": "10.0.0",
+        "eslint-plugin-simple-import-sort": "12.0.0",
         "jest": "29.7.0",
         "rimraf": "5.0.5",
         "source-map-support": "0.5.21",
         "tmp-promise": "3.0.3",
-        "typedoc": "0.25.4",
-        "typescript": "5.3.3"
+        "typedoc": "0.25.12",
+        "typescript": "5.4.2"
     },
     "dependencies": {
-        "@kayahr/text-encoding": "^1.2.1",
-        "tslib": "^2.6.2",
-        "web-streams-polyfill": "^3.2.1"
+        "@kayahr/text-encoding": "^1.3.0",
+        "tslib": "^2.6.2"
     }
 }
