--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "projects": [
             {
                 "displayName": "node",
+                "testEnvironment": "jest-environment-node-single-context",
                 "testMatch": [
                     "<rootDir>/lib/test/**/*.test.js"
                 ]
@@ -79,6 +80,7 @@
         "eslint-plugin-deprecation": "2.0.0",
         "eslint-plugin-simple-import-sort": "12.0.0",
         "jest": "29.7.0",
+        "jest-environment-node-single-context": "29.4.0",
         "rimraf": "5.0.5",
         "source-map-support": "0.5.21",
         "tmp-promise": "3.0.3",
