--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,9 +19,7 @@
         },
         {
             "label": "Run unit tests",
-            "type": "npm",
-            "script": "check",
-            "problemMatcher": [],
+            "command": "${command:testing.coverageAll}",
             "group": {
                 "kind": "test",
                 "isDefault": true
