--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,24 +5,21 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [ 18.x, 20.x ]
+        node-version: [ 22.x ]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
       - name: Build
         run: npm ci
       - name: Test
-        uses: GabrielBB/xvfb-action@v1
-        with:
-          run: npm test
+        run: npm test
       - name: Build API Doc
-        run: npm run doc
+        run: npm run apidoc
       - name: Deploy API Doc
-        if: ${{ github.ref == 'refs/heads/main' && matrix.node-version == '20.x' }}
-        uses: JamesIves/github-pages-deploy-action@v4.3.3
+        if: ${{ github.ref == 'refs/heads/main' && matrix.node-version == '22.x' }}
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages
-          folder: doc/api
+          folder: lib/apidoc
