--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "$schema": "http://json.schemastore.org/package",
     "name": "@kayahr/datastream",
     "version": "1.2.1",
+    "type": "module",
     "description": "Data stream classes for writing and reading all kinds of data types, even single bits",
     "keywords": [
         "typescript",
@@ -27,68 +28,35 @@
         ".": "./lib/main/core.js",
         "./node": "./lib/node/node.js"
     },
-    "types": "lib/main/core.d.ts",
-    "typesVersions": {
-        "*": {
-            "node": [
-                "lib/node/node.d.ts"
-            ]
-        }
-    },
     "scripts": {
-        "clean": "rimraf lib coverage doc/api",
-        "compile": "tsc",
-        "check": "better-jest",
-        "doc": "typedoc",
-        "lint": "eslint --max-warnings 0 --ext .ts src",
-        "cspell": "cspell --no-progress",
-        "prepare": "npm run clean && npm run compile",
-        "test": "npm run check && npm run lint && npm run doc -- --emit none && npm run cspell"
-    },
-    "jest": {
-        "projects": [
-            {
-                "displayName": "node",
-                "testEnvironment": "jest-environment-node-single-context",
-                "testMatch": [
-                    "<rootDir>/lib/test/**/*.test.js"
-                ]
-            },
-            {
-                "displayName": "electron",
-                "runner": "@kayahr/jest-electron-runner",
-                "testEnvironment": "@kayahr/jest-electron-runner/environment",
-                "testMatch": [
-                    "<rootDir>/lib/test/**/*.test.js"
-                ]
-            }
-        ],
-        "collectCoverage": true,
-        "collectCoverageFrom": [
-            "<rootDir>/lib/main/**/*.js"
-        ]
+        "clean": "rimraf lib",
+        "build": "run-s build:*",
+        "build:compile": "tsc",
+        "test": "run-s test:*",
+        "test:unit": "vitest run",
+        "test:lint": "eslint --max-warnings 0",
+        "test:apidoc": "typedoc --emit none",
+        "test:spell": "cspell --no-progress --no-summary",
+        "apidoc": "typedoc",
+        "install:browser": "playwright install chromium",
+        "prepare": "run-s install:browser clean build"
     },
     "devDependencies": {
-        "@kayahr/better-jest": "1.2.1",
-        "@kayahr/eslint-config": "2.10.2",
-        "@kayahr/jest-electron-runner": "29.11.0",
-        "@types/jest": "29.5.12",
-        "@typescript-eslint/eslint-plugin": "7.2.0",
-        "@typescript-eslint/parser": "7.2.0",
-        "cspell": "8.6.0",
-        "eslint": "8.57.0",
-        "eslint-plugin-deprecation": "2.0.0",
-        "eslint-plugin-simple-import-sort": "12.0.0",
-        "jest": "29.7.0",
-        "jest-environment-node-single-context": "29.4.0",
-        "rimraf": "5.0.5",
+        "@kayahr/eslint-config": "3.3.0",
+        "@kayahr/vitest-matchers": "1.0.0",
+        "@vitest/browser": "2.1.8",
+        "@vitest/coverage-v8": "2.1.8",
+        "cspell": "8.17.1",
+        "npm-run-all": "4.1.5",
+        "playwright": "1.49.1",
+        "rimraf": "6.0.1",
         "source-map-support": "0.5.21",
         "tmp-promise": "3.0.3",
-        "typedoc": "0.25.12",
-        "typescript": "5.4.2"
+        "typedoc": "0.27.6",
+        "typescript": "5.7.2",
+        "vitest": "2.1.8"
     },
     "dependencies": {
-        "@kayahr/text-encoding": "^1.3.0",
-        "tslib": "^2.6.2"
+        "@kayahr/text-encoding": "^1.3.0"
     }
 }
