--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "@kayahr/vitest-matchers": "1.1.0",
         "@vitest/browser": "2.1.8",
         "@vitest/coverage-v8": "2.1.8",
+        "base64-js": "1.5.1",
         "cspell": "8.17.1",
         "npm-run-all": "4.1.5",
         "playwright": "1.49.1",
