--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "keywords": [
         "typescript",
         "data",
+        "datastream",
         "stream",
         "input",
         "output"
