--- a/package.json
+++ b/package.json
@@ -45,18 +45,19 @@
     "devDependencies": {
         "@kayahr/eslint-config": "3.3.0",
         "@kayahr/vitest-matchers": "1.1.0",
-        "@vitest/browser": "2.1.8",
-        "@vitest/coverage-v8": "2.1.8",
+        "@types/node": "22.13.1",
+        "@vitest/browser": "3.0.5",
+        "@vitest/coverage-v8": "3.0.5",
         "base64-js": "1.5.1",
-        "cspell": "8.17.2",
+        "cspell": "8.17.3",
         "npm-run-all": "4.1.5",
-        "playwright": "1.49.1",
+        "playwright": "1.50.1",
         "rimraf": "6.0.1",
         "source-map-support": "0.5.21",
         "tmp-promise": "3.0.3",
         "typedoc": "0.27.6",
         "typescript": "5.7.3",
-        "vitest": "2.1.8"
+        "vitest": "3.0.5"
     },
     "dependencies": {
         "@kayahr/text-encoding": "^2.0.0"
