--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "$schema": "http://json.schemastore.org/tsconfig",
     "compilerOptions": {
+        "allowImportingTsExtensions": true,
         "declaration": true,
         "forceConsistentCasingInFileNames": true,
         "lib": [
@@ -19,6 +20,7 @@
         "noUnusedParameters": false,
         "outDir": "./lib",
         "preserveSymlinks": true,
+        "rewriteRelativeImportExtensions": true,
         "rootDir": "./src",
         "skipLibCheck": true,
         "sourceMap": true,
